--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,1 +1,12 @@
-hi
+hi user
+
+<h1>create event</h1>
+
+<form  action = "/events" method = "POST">
+        <input type= "hidden" name = "authenticity_token" value = "<%= form_authenticity_token %>">
+        <input type= "eventype" name ="eventype[eventype]" placeholder="eventype">
+        <input type="location" name="event[location]" placeholder="location">
+        <input type="date" name="event">
+        <input type="submit" name="submit" class="submit">
+
+</form>
