--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -25,8 +25,6 @@ Login and Registration</title>
         <input type ="password" name="user[password_confirmation]" placeholder="password_confirmation">
         <input type="submit" name="submit" class="submit">
 
-</form>
-
-</body>
+</form></body>
 
 </html>
