--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,12 @@
-<%= form_for User.new do |f| %>
-    username: <%= f.text_field :username%><br />
-    email : <%= f.email_field :email%><br />
-    password: <%= f.password_field :password %><br />
-  
-    <%= f.submit %>
-  <% end %>
+
+<h1>Registration </h1>
+
+<form  action = "/users" method = "POST">
+        <input type= "hidden" name = "authenticity_token" value = "<%= form_authenticity_token %>">
+        <input type= "name" name ="username[name]" placeholder="name">
+        <input type="email" name="user[email]" placeholder="email">
+        <input type ="password" name="user[password]" placeholder="password">
+        <input type ="password" name="user[password_confirmation]" placeholder="password_confirmation">
+        <input type="submit" name="submit" class="submit">
+
+</form></body>
