--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,6 +1,7 @@
 Hello user
 
 <h1>create event</h1>
+<%=render 'layouts/header' %>
 
 <form  action = "/events" method = "POST">
         <input type= "hidden" name = "authenticity_token" value = "<%= form_authenticity_token %>">
