attendee set, route process get instead of post action

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -4,6 +4,8 @@
                 <%= event.eventype %>
               <%= event.location %>
                 <%= event.date %>
+                <%= link_to 'attend', attendees_path %> ,  <%= link_to 'delete event', '/destroy', method: :delete %>
+
         </div>
 <%end%>
 
