--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,4 @@
 
 <%= link_to "Sign out", '/sign_in' %>
 <%= link_to "events", events_path %>
-<%= link_to "invite", '/friend_requests/new' %>
+<%= link_to "past events", events_path%>
