--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,10 +1,2 @@
-<table class="attendees">
-  <th> Attendees <%= @attendees.count %></th>
-<% @attendees.each do |attendee| %>
-  <tr>
-    <td><%= attendee.username %></td>
-    <td><%= attendee.email %></td>
-    <td><%= link_to ' check profile', attendee %></td>
-  </tr>
-<% end %>
-<table>
+<h1>Events#show</h1>
+<p>THIS PAGE SHOULD CONTAIN  @user.ATTENDEES TO AN EVENT IN EVENT#SHOW ACTION  app/views/events/show.html.erb</p>
