--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,12 +1,8 @@
+<% provide(:button_text, 'Create my account') %>
+<h1>Sign up</h1>
 
-<h1>Registration </h1>
-
-<form  action = "/users" method = "POST">
-        <input type= "hidden" name = "authenticity_token" value = "<%= form_authenticity_token %>">
-        <input type= "name" name ="username[name]" placeholder="name">
-        <input type="email" name="user[email]" placeholder="email">
-        <input type ="password" name="user[password]" placeholder="password">
-        <input type ="password" name="user[password_confirmation]" placeholder="password_confirmation">
-        <input type="submit" name="submit" class="submit">
-
-</form></body>
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+    <%= render 'reg' %>
+  </div>
+</div>
