--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,11 +1,9 @@
-<h1>List of all events created</h1>
-
-<% @events.each do |event| %>
-    <div class = "event">
-            <%= event.eventype %>
-          <%= event.location %>
-            <%= event.date %>
-    </div>
-<%end%>
-
-<%= link_to 'back', new_event_path %>
+<div class="row">
+  <aside class="col-md-4">
+    <section class="user_info">
+      <h1>
+        <%= @user.username %>, <%= @user.email %>
+      </h1>
+    </section>
+  </aside>
+</div>
