--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -2,5 +2,5 @@
 <%= render 'public/header' %>
 
 <% provide(:button, "Create Event") %>
-<h1>Create Event</h1>
+<h1>Create Your Event!</h1>
 <%= render 'Eventform' %>
