--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,2 +1,11 @@
-<h1>Events#show</h1>
-<p>THIS PAGE SHOULD CONTAIN  @user.ATTENDEES TO AN EVENT IN EVENT#SHOW ACTION  app/views/events/show.html.erb</p>
+<%=  render @event %>
+<table class = "attendees" >
+    <th> Attendees <%= attendees.count %></th>
+    <% @attendees.each do |attend| %>
+        <tr>
+            <td><%= attend.username %></td>
+            <td><%= attend.email  %></td>
+            <td><%= link_to 'View profile', attendee %></td>
+        </tr>
+    <% end %>
+</table>
