final changes made

--- a/app/views/events/_Eventform.html.erb
+++ b/app/views/events/_Eventform.html.erb
@@ -1,5 +1,5 @@
 
-<%= form_for(@events , url: '/events', method: :post) do |f| %>
+<%= form_for(@event , url: '/events', method: :post) do |f| %>
     <%= f.label :eventype %>
     <%= f.text_field :eventype, class: "form-control" %>
 
