--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,7 +1,19 @@
-<% if @events.try(:any?) %>
-  
-  <div> <h1>Upcoming Events (<%= @upcoming_events.try(:count) %>)</h1></div><br>
-  <%= render 'public/eventsList', events: @Upcoming_events %><br>
-  <div><h1>Past Events (<%= @past_events.count %>)</h1></div><br>
-  <%= render 'public/eventsList', events:@past_events %><br>
+<% @events %>
+<h1> upcoming_events (<%= @upcoming_events.count %>)</h1>
+<% @upcoming_events.each do |event| %><br>
+  <%= event.eventype %><br>
+  <%= event.description %><br>
+  <%= event.location %><br>
+  <%= event.date %><br>
+      <%= render 'public/eventstatus', event: event %>
 <% end %>
+
+<h1> past_events (<%= @past_events.count %>)</h1>
+<% @past_events.each do |event| %><br>
+  <%= event.eventype %><br>
+  <%= event.description %><br>
+  <%= event.location %><br>
+  <%= event.date %><br>
+      <%= render 'public/eventstatus', event: event %>
+<% end %>
+
