required changes implemented

--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -2,5 +2,5 @@
 <%= render 'public/header' %>
 
 <% provide(:button, "Create Event") %>
-<h1>Create Your Event!</h1>
+<div id ="gift"><h1> Publish your event !</h1></div>
 <%= render 'Eventform' %>
