--- a/app/views/public/_header.html.erb
+++ b/app/views/public/_header.html.erb
@@ -6,7 +6,7 @@
           
               <%= link_to "home", '#' %>
                 <%= link_to "Sign out", '/logout', method: :delete %>
-                <%= link_to "events", '/events' %>
+                <%= link_to "events", eventlist_path %>
    
         <% end %>
   </div>
