--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,20 @@
 <h2><%= @user.username %> Events</h2>
 <ul>
-  <% @user.events.each do |event| %>
+  <% @events.each do |event| %>
     <%= content_tag :li, event.description %>
     <%= render 'public/eventstatus', event: event%>
   <% end %>
 </ul>
+<h2>past events (<%= @attended_events.count %>)</h2>
+ <%= content_tag :li, @event.description %>
+ <%= content_tag :li, @event.date %>
+ 
+
+<h2>upcoming events (<%= @upcoming_events.count %>)</h2>
+  <% @events.each do |event| %>
+    <%= content_tag :li, event.description %>
+    <%= content_tag :li, event.date %>
+    <%= render 'public/eventstatus', event: event%>
+  <% end %>
+  
+
